# KMA

./: .gitignore  README.md  RELEASING.md  context.md  demo.py  pyproject.toml
.github/workflows/: publish.yml
examples/: openrouter_agent.py  real_pipeline_test.py
kma/: __init__.py  bench.py  chart.py  data.py  demo_agent.py  embeddings.py  engine.py  eval.py  extract.py  fusion.py  geometry.py  manifold.py  mcp_server.py  memory.py  mobius.py  models.py  placement.py  retrievers.py  scale_bench.py  store.py  stress.py  train.py  viz.py
kma/connectors/: __init__.py  openrouter.py
tests/: test_curvature.py  test_engine.py  test_extract.py  test_geometry.py  test_learned.py  test_memory.py  test_openrouter.py
